--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <!-- Google Sign-In -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <meta name="google-signin-client_id" content="VOTRE_CLIENT_ID_GOOGLE.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="1048488403905-352s9klgtu348c4f8g04dqnhtg7hjf4c.apps.googleusercontent.com">
 </head>
 <body>
     <!-- Navigation -->
